package Game;
public abstract class ChanceCard {

    public ChanceCard(){}

    public void execute(Player p){}

    public String printText(){
        return null;
    }

    
}

