@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0

class Player{
Balance


}
class Game{
Player
Die

}
class Die{
DieValue
}
class Board{
Fields
}

class ChanceCard{
RandomCardEffect
}

class DiceCup{
DiceValue
}

class Field{
Houses
Jail
Chance
Start
}



DiceCup "1"--"1" Game : contains
Die "2" -- "1" DiceCup : contains
Game"1"--"1" Board : evaluates
Player "2"--"1" Game : contains
ChanceCard "1..*" -- Game : contains
Field "40" -- "1" Board : contains



@enduml